--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "rules": {
         "linebreak-style": "off",
         "no-console": "off",
-        "no-trailing-spaces": "off" 
+        "no-trailing-spaces": "off",
+        "no-unused-vars": "off"
     }
 }
