--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "linebreak-style": "off",
         "no-console": "off",
         "no-trailing-spaces": "off",
-        "no-unused-vars": "off"
+        "no-unused-vars": "off",
+        "prefer-const": "off"
     }
 }
