--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@google-cloud/storage": "^6.10.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dateformat": "^3.0.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
