--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
         "no-console": "off",
         "no-trailing-spaces": "off",
         "no-unused-vars": "off",
-        "prefer-const": "off"
+        "prefer-const": "off",
+        "consistent-return": "off",
+        "prefer-destructuring": "off"
     }
 }
